<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/take_picture_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_custom_card_img"
        android:layout_width="380dp"
        android:layout_height="480dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_take_picture">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_picture_taken"
            android:layout_width="236dp"
            android:layout_height="301dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="118dp"
            android:src="@mipmap/ic_launcher" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_hearthstone_card_template"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hearthstone_card_template" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_insert_card_name"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:hint="@string/card_name_txt_input"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_custom_card_img" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_card_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_insert_card_name" />


</androidx.constraintlayout.widget.ConstraintLayout>